Criando variações de regex

--- a/app/index.html
+++ b/app/index.html
@@ -35,8 +35,12 @@
     </div> -->
 
     <div class="row marketing">
-      <h3>Dólar Americano</h3>
+      <!-- <h3>Dólar Americano</h3> -->
       <p>1 USD</p>
+      <p>1.50 USD</p>
+      <p>1,50 USD</p>
+      <p>1.500</p>
+      <p>1.500,90</p>
       <p>5 USD</p>
       <p>120 USD</p>
       <br>
