Aplicar reconhecimento de novos tipos de inputs

--- a/app/index.html
+++ b/app/index.html
@@ -30,17 +30,16 @@
     <![endif]-->
 
   <div class="container">
-    <!-- <div class="jumbotron">
+    <div class="jumbotron">
       <h1>Dollar to Real Extension!</h1>
-    </div> -->
+    </div>
 
     <div class="row marketing">
-      <!-- <h3>Dólar Americano</h3> -->
+      <h3>Dólar Americano</h3>
       <p>1 USD</p>
-      <p>1.50 USD</p>
       <p>1,50 USD</p>
-      <p>1.500</p>
-      <p>1.500,90</p>
+      <p>1500</p>
+      <p>1500,90</p>
       <p>5 USD</p>
       <p>120 USD</p>
       <br>
