Validação para número de unidade de milhar com virgula

--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,8 @@
 
     <div class="row marketing">
       <h3>Dólar Americano</h3>
+      <p>USD 1,445.00</p>
+      <p>USD 595.00</p>
       <p>$11.89</p>
       <p>1 USD</p>
       <p>1,50 USD</p>
