--- a/html/popup.html
+++ b/html/popup.html
@@ -6,24 +6,19 @@
     <link rel="stylesheet" href="../css/main.css">
     <script src="../js/jquery-3.3.1.min.js"></script>
     <script src="../js/popup.js"></script>
-    <style>
-        body {
-            width: 350px;
-            height: 300px;
-            margin: 25px;
-        }
-    </style>
 </head>
 
 <body>
     <div class="container">
-        <div class="box-conteudo"><img src="../images/dollar.png" alt="" class="animated pulse infinite img-dollar">
+        <div class="box-conteudo">
+            <img src="../images/dollar.png" alt="Dollar" class="animated pulse infinite img-dollar">
             <div class="row marketing">
                 <h3>Quantos reais?</h3>
                 <hr>
             </div>
-            <h5>Selecione algum valor em dollar<br>para realizar a conversão.</h5><img src="../images/loading.gif" alt=""
-                class="loading">
+            <h5>Selecione algum valor em dollar<br>para realizar a conversão.</h5>
+            
+            <img src="../images/loading.gif" alt="Loading" class="loading">
             <p class="valor-convertido"></p>
         </div>
     </div>
